--- a/app/views/statistics/drugs.html.erb
+++ b/app/views/statistics/drugs.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
-    <h1>Drug effect statistics</h1>
-    <h4 class="stat">Side effects and interactions</h4>
+    <h1>Statistiche sugli effetti dei farmaci</h1>
+    <h4 class="stat">Effetti collaterali e interazioni</h4>
 </div>
 
 <div class=well>
