--- a/app/views/statistics/drugs.html.erb
+++ b/app/views/statistics/drugs.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-    <h1>Statistiche sulle problematiche segnalate</h1>
+    <h1>Analisi delle problematiche segnalate</h1>
     <!--<h4 class="stat">Effetti collaterali e interazioni</h4> -->
 </div>
 
