create the model, the controller, the models, the helpers, the migrations, the views, the partials and the forms to manage the automatic insertion of the surveys

--- a/app/views/statistics/aggregated_drugs.html.erb
+++ b/app/views/statistics/aggregated_drugs.html.erb
@@ -16,7 +16,7 @@
             <div class="row">
                <div class="col-md-6">
                     <%= label_tag "select_drug", "Seleziona i farmaci", class: "stat white" %><br/>
-                    <%= select_tag "selected", options_from_collection_for_select(@drug_names, "drug_name", "drug_name"), multiple: true, class: "custom-select" %>
+                    <%= select_tag "selected", options_from_collection_for_select(@drug_names, "drug_name", "drug_name"), multiple: true, class: "selectpicker" %>
                 </div>                
                 <div class="col-md-6">
                  <%= label_tag "selected_drugs", "Farmaci Selezionati:", class: "stat white" %><br/>
