--- a/app/views/statistics/drugs.html.erb
+++ b/app/views/statistics/drugs.html.erb
@@ -15,6 +15,11 @@
 </div>
 
 <% @drug_names.each do |d| %>
+    <% next if @black_list.include?(d.drug_name) %>
+    <%# if @black_list.include? d.drug_name  %>
+        
+    <%# end %>    
+        
     <h3 class="stat <%= cycle('black', 'green', 'brown') %> "><%= d.drug_name.upcase %></h3>
     <div class="well">
         <div class="row">
